Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/ArbolesBalanceados.ipynb
+++ b/AlgoritmosBusqueda/ArbolesBalanceados.ipynb
@@ -318,7 +318,7 @@
       "source": [
         "# Código y Pruebas\n",
         "\n",
-        "Para poder usar el código de las clase previas, primero necesitamos agregar estos *jupyters* a la sesión actual y posteriormente importarlas.\n",
+        "Para poder usar el código de las clase previas, primero necesitamos agregar estos *jupyters* a la sesión actual y posteriormente importarlos.\n",
         "\n",
         "Cada uno de los métodos de la clase `AAVL` cuenta con la documentación necesaria para poder comprender los detalles de cada método.\n",
         "\n",
@@ -493,8 +493,17 @@
         "    #haber quedado desbalanceado\n",
         "    self.balancea(borradopadre)"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AYilgIvy5jfH"
+      },
+      "source": [
+        "A continuación se muestran la pruebas de la clase `AAVL`."
+      ]
     },
     {
       "cell_type": "code",
@@ -532,7 +541,7 @@
         "  # llamamos a la funcion main\n",
         "  main()"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,6 +574,38 @@
             "-1\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N5P6SZ625xNS"
+      },
+      "source": [
+        "En la siguiente animación podémos ver detalladamente lo que sucede al ejecutar la celda que realiza las pruebas sobre el `AAVL`.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/prueba.gif?raw=1\" width=\"850\"> \n",
+        "</center>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "k2cm6M0b7uJ9"
+      },
+      "source": [
+        "Despues de insertar el valor 1, el AAVL se ve así.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/aavl.png?raw=1\" width=\"700\"> \n",
+        "</center>\n",
+        "\n",
+        "Podemos notar que el factor de equilibrio de la raíz es $altura(H_D) - altura(H_I) = 1 -2 = -1$ tal como se muestra en código.\n",
+        "\n",
+        "Comprueba (de manera manual) que los recorridos que se muestran en la ejecución del código correspondan con las definiciones de dichos recorridos.\n",
+        "\n",
+        "Te sugiero que realices más pruebas (insertar, borrar, etc.), tanto con el programa *trees.jar*, como con el código mostrado en este *colab*."
       ]
     },
     {
