Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/05_TablasHash.ipynb
+++ b/AlgoritmosBusqueda/05_TablasHash.ipynb
@@ -261,6 +261,140 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "gFt6GN82iXx1"
+      },
+      "source": [
+        "## Ejemplo diccionarios *Python*\n",
+        "\n",
+        "Para el siguiente ejemplo vamos a usar el archivo *ManejoDatos9180.txt* que hemos usado en ocasiones previas.\n",
+        "\n",
+        "La diferencia principal es que en esta ocasión vamos a usar diccionarios para almacenar los datos de los alumnos, en lugar de usar una clase para almacenar estos datos."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5mS23fksi108",
+        "outputId": "e0702c9e-72f0-4e43-bfae-381aa9a5dd68",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/ManejodeDatos9180.txt"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2021-11-19 00:15:38--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/ManejodeDatos9180.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 3103 (3.0K) [text/plain]\n",
+            "Saving to: ‘ManejodeDatos9180.txt’\n",
+            "\n",
+            "ManejodeDatos9180.t 100%[===================>]   3.03K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2021-11-19 00:15:38 (31.5 MB/s) - ‘ManejodeDatos9180.txt’ saved [3103/3103]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tCcpuWwti2vC"
+      },
+      "source": [
+        "Una vez que tenemos el archivo en la sesión de *Google Colab*, ahora necesitamos leerlo y usando *regex* vamos a capturar los datos de los alumnos en un diccionario y posteriormente mostramos el contenido de los diccionarios."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JbVooa3TjFQP",
+        "outputId": "61e66cbd-f943-45d7-a5bb-3756910a396a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import re\n",
+        "# se abre el archivo\n",
+        "archivo = open(\"ManejodeDatos9180.txt\")\n",
+        "# patron para el nombre\n",
+        "apellido1 = \"\\d+\\s+[áéíóúA-Za-zñÑ]+\"\n",
+        "# patron para telefono\n",
+        "telefono = \"\\d+-\\d*-\\d*-*\\d*\"\n",
+        "\n",
+        "# eliminamos la prime linea del archivo\n",
+        "archivo.readline()\n",
+        "\n",
+        "# creamos una lista vacia donde guardaremos los diccionarios\n",
+        "alumnos = []\n",
+        "\n",
+        "# leemos cada una de las lineas y usando un determinado patron\n",
+        "# se capturan numbre completo, carrera, correo y telefono\n",
+        "for linea in archivo:\n",
+        "  alumnos.append({\"nombre\":re.findall(apellido1, linea), \"telefono\":re.findall(telefono, linea)})\n",
+        "\n",
+        "# imprimimos cada uno de los diccionarios que representa a cada alumno\n",
+        "for alumno in alumnos:\n",
+        "  print(alumno)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'nombre': ['1\\tAlemán'], 'telefono': ['44-635-28-288']}\n",
+            "{'nombre': ['2\\tAmador'], 'telefono': ['55-640-83-871']}\n",
+            "{'nombre': ['3\\tAmaro'], 'telefono': ['55-4977-6159']}\n",
+            "{'nombre': ['4\\tCabrera'], 'telefono': ['55-477-61-948']}\n",
+            "{'nombre': ['5\\tCazares'], 'telefono': ['55-539-42-382']}\n",
+            "{'nombre': ['6\\tContreras'], 'telefono': ['55-399-75-350']}\n",
+            "{'nombre': ['7\\tDorantes'], 'telefono': ['55-128-98-209']}\n",
+            "{'nombre': ['8\\tDurán'], 'telefono': ['333-72-554-55']}\n",
+            "{'nombre': ['9\\tEnríquez'], 'telefono': ['55-782-67-957']}\n",
+            "{'nombre': ['10\\tFlores'], 'telefono': ['55-665-72-227']}\n",
+            "{'nombre': ['11\\tGarcés'], 'telefono': ['55-244-10-361']}\n",
+            "{'nombre': ['12\\tGarcía'], 'telefono': ['46-928-422-65']}\n",
+            "{'nombre': ['13\\tGarcía'], 'telefono': ['55-580-24-293']}\n",
+            "{'nombre': ['14\\tGómez'], 'telefono': ['55-789-33-403']}\n",
+            "{'nombre': ['15\\tGónzalez'], 'telefono': ['55-907-91-129']}\n",
+            "{'nombre': ['16\\tGuevara'], 'telefono': ['55-121-67-977']}\n",
+            "{'nombre': ['17\\tGúzman'], 'telefono': ['55-970-28-624']}\n",
+            "{'nombre': ['18\\tHérnandez'], 'telefono': ['55-161-68-809']}\n",
+            "{'nombre': ['19\\tJuárez'], 'telefono': ['55-497-22-370']}\n",
+            "{'nombre': ['20\\tLerdo'], 'telefono': ['55-7190-3848']}\n",
+            "{'nombre': ['21\\tNuñez'], 'telefono': ['5554-72-20-63']}\n",
+            "{'nombre': ['22\\tNúñez'], 'telefono': ['55-660-99-872']}\n",
+            "{'nombre': ['23\\tPérez'], 'telefono': ['55-376-26-789']}\n",
+            "{'nombre': ['24\\tRamírez'], 'telefono': ['55-812-56-695']}\n",
+            "{'nombre': ['25\\tReséndiz'], 'telefono': ['55-583-43-525']}\n",
+            "{'nombre': ['26\\tRivera'], 'telefono': ['55-489-59-362']}\n",
+            "{'nombre': ['27\\tRodríguez'], 'telefono': ['888-314-46-780']}\n",
+            "{'nombre': ['28\\tRodríguez'], 'telefono': ['55-931-23-412']}\n",
+            "{'nombre': ['29\\tRodríguez'], 'telefono': ['55-366-59-591']}\n",
+            "{'nombre': ['30\\tSalas'], 'telefono': ['55-276-13-206']}\n",
+            "{'nombre': ['31\\tSalinas'], 'telefono': ['55-626-14-760']}\n",
+            "{'nombre': ['32\\tSánchez'], 'telefono': ['55-461-15-303']}\n",
+            "{'nombre': ['33\\tSánchez'], 'telefono': ['77-174-67-488']}\n",
+            "{'nombre': ['34\\tTéllez'], 'telefono': ['55-93680-510']}\n",
+            "{'nombre': ['35\\tVásquez'], 'telefono': ['55-687-34366']}\n",
+            "{'nombre': ['36\\tZamarripa'], 'telefono': ['55-458-69-357']}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "HzT2Ru3rqGhW"
       },
       "source": [
