--- a/AlgoritmosBusqueda/ArbolesBalanceados.ipynb
+++ b/AlgoritmosBusqueda/ArbolesBalanceados.ipynb
@@ -330,21 +330,90 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CxyQtkfzniRm"
+        "id": "CxyQtkfzniRm",
+        "outputId": "3c1c9007-a0ce-47be-8eb7-90236516d34a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
         "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinariosBusqueda.ipynb"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2021-11-19 01:47:48--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 16833 (16K) [text/plain]\n",
+            "Saving to: ‘ArbolesBinarios.ipynb’\n",
+            "\n",
+            "\rArbolesBinarios.ipy   0%[                    ]       0  --.-KB/s               \rArbolesBinarios.ipy 100%[===================>]  16.44K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2021-11-19 01:47:48 (103 MB/s) - ‘ArbolesBinarios.ipynb’ saved [16833/16833]\n",
+            "\n",
+            "--2021-11-19 01:47:48--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinariosBusqueda.ipynb\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 28864 (28K) [text/plain]\n",
+            "Saving to: ‘ArbolesBinariosBusqueda.ipynb’\n",
+            "\n",
+            "ArbolesBinariosBusq 100%[===================>]  28.19K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2021-11-19 01:47:48 (77.3 MB/s) - ‘ArbolesBinariosBusqueda.ipynb’ saved [28864/28864]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7hljHiPQBBWL"
+        "id": "9eVWIE7r4Yor",
+        "outputId": "40bd9c79-562c-450b-aeb4-5ba1727a2fd7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "!pip install import-ipynb"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting import-ipynb\n",
+            "  Downloading import-ipynb-0.1.3.tar.gz (4.0 kB)\n",
+            "Building wheels for collected packages: import-ipynb\n",
+            "  Building wheel for import-ipynb (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for import-ipynb: filename=import_ipynb-0.1.3-py3-none-any.whl size=2975 sha256=113534b2791454e562d8209bbfa2d4c75e952af1c3af832308cb5a3836814638\n",
+            "  Stored in directory: /root/.cache/pip/wheels/b1/5e/dc/79780689896a056199b0b9f24471e3ee184fbd816df355d5f0\n",
+            "Successfully built import-ipynb\n",
+            "Installing collected packages: import-ipynb\n",
+            "Successfully installed import-ipynb-0.1.3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7hljHiPQBBWL",
+        "outputId": "f9fc64f4-751a-4d0a-bf36-a02b647f80a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import import_ipynb\n",
         "from ArbolesBinariosBusqueda import ABB\n",
         "from ArbolesBinarios import Nodo\n",
         "\n",
@@ -493,8 +562,29 @@
         "    #haber quedado desbalanceado\n",
         "    self.balancea(borradopadre)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "importing Jupyter notebook from ArbolesBinariosBusqueda.ipynb\n",
+            "--2021-11-19 01:49:06--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 16833 (16K) [text/plain]\n",
+            "Saving to: ‘ArbolesBinarios.ipynb.1’\n",
+            "\n",
+            "\rArbolesBinarios.ipy   0%[                    ]       0  --.-KB/s               \rArbolesBinarios.ipy 100%[===================>]  16.44K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2021-11-19 01:49:06 (113 MB/s) - ‘ArbolesBinarios.ipynb.1’ saved [16833/16833]\n",
+            "\n",
+            "Requirement already satisfied: import-ipynb in /usr/local/lib/python3.7/dist-packages (0.1.3)\n",
+            "importing Jupyter notebook from ArbolesBinarios.ipynb\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -512,7 +602,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e02d8523-49a0-47ee-dac0-5c4de8480be7"
+        "outputId": "088cccf4-ec46-447a-ed98-078c88c32955"
       },
       "source": [
         "def main():\n",
@@ -541,7 +631,7 @@
         "  # llamamos a la funcion main\n",
         "  main()"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
