--- a/AlgoritmosBusqueda/ArbolesBalanceados.ipynb
+++ b/AlgoritmosBusqueda/ArbolesBalanceados.ipynb
@@ -331,14 +331,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "CxyQtkfzniRm",
-        "outputId": "3c1c9007-a0ce-47be-8eb7-90236516d34a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "20207690-7edf-4d02-8226-50c55a40ef52"
       },
       "source": [
         "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
-        "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinariosBusqueda.ipynb"
+        "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinariosBusqueda.ipynb\n",
+        "!pip install import-ipynb"
       ],
       "execution_count": 1,
       "outputs": [
@@ -346,55 +347,33 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2021-11-19 01:47:48--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2021-11-19 03:37:36--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 16833 (16K) [text/plain]\n",
             "Saving to: ‘ArbolesBinarios.ipynb’\n",
             "\n",
             "\rArbolesBinarios.ipy   0%[                    ]       0  --.-KB/s               \rArbolesBinarios.ipy 100%[===================>]  16.44K  --.-KB/s    in 0s      \n",
             "\n",
-            "2021-11-19 01:47:48 (103 MB/s) - ‘ArbolesBinarios.ipynb’ saved [16833/16833]\n",
+            "2021-11-19 03:37:36 (101 MB/s) - ‘ArbolesBinarios.ipynb’ saved [16833/16833]\n",
             "\n",
-            "--2021-11-19 01:47:48--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinariosBusqueda.ipynb\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2021-11-19 03:37:36--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinariosBusqueda.ipynb\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 28864 (28K) [text/plain]\n",
             "Saving to: ‘ArbolesBinariosBusqueda.ipynb’\n",
             "\n",
-            "ArbolesBinariosBusq 100%[===================>]  28.19K  --.-KB/s    in 0s      \n",
+            "ArbolesBinariosBusq 100%[===================>]  28.19K  --.-KB/s    in 0.001s  \n",
             "\n",
-            "2021-11-19 01:47:48 (77.3 MB/s) - ‘ArbolesBinariosBusqueda.ipynb’ saved [28864/28864]\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9eVWIE7r4Yor",
-        "outputId": "40bd9c79-562c-450b-aeb4-5ba1727a2fd7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "!pip install import-ipynb"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "2021-11-19 03:37:36 (47.6 MB/s) - ‘ArbolesBinariosBusqueda.ipynb’ saved [28864/28864]\n",
+            "\n",
             "Collecting import-ipynb\n",
             "  Downloading import-ipynb-0.1.3.tar.gz (4.0 kB)\n",
             "Building wheels for collected packages: import-ipynb\n",
             "  Building wheel for import-ipynb (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for import-ipynb: filename=import_ipynb-0.1.3-py3-none-any.whl size=2975 sha256=113534b2791454e562d8209bbfa2d4c75e952af1c3af832308cb5a3836814638\n",
+            "  Created wheel for import-ipynb: filename=import_ipynb-0.1.3-py3-none-any.whl size=2975 sha256=26f098eaaa89da6fb8eddc4e93b18de46f79a8fb78d3c963f335579e988565bc\n",
             "  Stored in directory: /root/.cache/pip/wheels/b1/5e/dc/79780689896a056199b0b9f24471e3ee184fbd816df355d5f0\n",
             "Successfully built import-ipynb\n",
             "Installing collected packages: import-ipynb\n",
@@ -407,10 +386,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "7hljHiPQBBWL",
-        "outputId": "f9fc64f4-751a-4d0a-bf36-a02b647f80a8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cbe33b08-d246-4438-9cea-1606ecd16c5b"
       },
       "source": [
         "import import_ipynb\n",
@@ -562,14 +541,14 @@
         "    #haber quedado desbalanceado\n",
         "    self.balancea(borradopadre)"
       ],
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "importing Jupyter notebook from ArbolesBinariosBusqueda.ipynb\n",
-            "--2021-11-19 01:49:06--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
+            "--2021-11-19 03:37:45--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/AlgoritmosBusqueda/ArbolesBinarios.ipynb\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -578,7 +557,7 @@
             "\n",
             "\rArbolesBinarios.ipy   0%[                    ]       0  --.-KB/s               \rArbolesBinarios.ipy 100%[===================>]  16.44K  --.-KB/s    in 0s      \n",
             "\n",
-            "2021-11-19 01:49:06 (113 MB/s) - ‘ArbolesBinarios.ipynb.1’ saved [16833/16833]\n",
+            "2021-11-19 03:37:45 (102 MB/s) - ‘ArbolesBinarios.ipynb.1’ saved [16833/16833]\n",
             "\n",
             "Requirement already satisfied: import-ipynb in /usr/local/lib/python3.7/dist-packages (0.1.3)\n",
             "importing Jupyter notebook from ArbolesBinarios.ipynb\n"
@@ -602,7 +581,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "088cccf4-ec46-447a-ed98-078c88c32955"
+        "outputId": "6aab8a95-90d4-4d5f-ace2-2c9e03103137"
       },
       "source": [
         "def main():\n",
@@ -631,7 +610,7 @@
         "  # llamamos a la funcion main\n",
         "  main()"
       ],
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
