--- a/Simulacion/02_TeoriaDeFilas.ipynb
+++ b/Simulacion/02_TeoriaDeFilas.ipynb
@@ -59,11 +59,15 @@
         "id": "G5evWcwGAP7J"
       },
       "source": [
-        "La ciencia se desarrolla aplicando el método científico, lo que significa que, **se observa un fenómeno** que se requiere estudiar, **se plantea una hipótesis*** que explica el comportamiento de dicho fenómeno y finalmente **mediante una serie de experimentos (algunos muy costosos) se pretende corroborar la hipótesis**.\n",
+        "Frecuentemente en el estudio de fenómenos naturales o sociales, se presentan situaciones en las cuales se agrupan elementos en formas de linea en espera de ser atendidos o procesados.\n",
         "\n",
-        "En el campo de las ciencias exactas la simulación por computadora ha probado ser una herramienta extremadamente útil, ya que permite ahorrar mucho tiempo y dinero. Una simulación por computadora normalmente no es muy costosa y se puede repetir las veces que sea necesario e incluso se puede acelerar el paso de tiempo del fenómeno que se requiere estudiar.\n",
+        "También con mucha frecuencia es de importancia tratar de averiguar mediante una simulación cual sera el patrón de espera para ser atendido o procesado, cuanto tiempo tardara un individuo en completar una labor o cuanto tiempo tomará completar una determinada labor.\n",
         "\n",
-        "Es por estos motivos que generar simulaciones **adecuadas** y **confiables** es una habilidad importante de todo estudiante de ciencias."
+        "La parte teórica de este análisis se realiza mediante al disciplina conocida como **teoría de filas**, esta área de las ciencias trata de predecir mediante elementos matemáticos las variables y procesos que intervienen en una situación en la cual se presente una o más filas.\n",
+        "\n",
+        "En nuestro curso esto es de relevancia ya que la parte teórica ayuda al momento de entender el funcionamiento de un sistema complejo, como lo pude ser todo aquel en el que intervienen varios individuos o procesos y por otro lado mediante algún lenguaje de programación podemos realizar la simulación que corrobore el análisis teórico.\n",
+        "\n",
+        "En materias como **Investigación de Operaciones** o **Programación Lineal** se profundiza en conceptos importantes al tratar de optimizar el desempeño de un sistema complejo, pero para nuestro curso será que suficiente conocer los elementos básicos de la teoría de filas."
       ]
     },
     {
